@@ -1,0 +1,2 @@
+CREATE TABLE alter_test (d STRING);
+ALTER TABLE alter_test ADD COLUMNS (ds DATE);
